--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,14 @@
     @apply bg-background text-foreground;
   }
 }
+
+.isScrolling {
+  --tw-bg-opacity:1;
+  background-color:rgb(255 255 255/var(--tw-bg-opacity));
+  --tw-shadow:0px 0px 0px 1px rgba(35,38,59,.05),0px 2px 4px rgba(35,38,59,.1);
+  --tw-shadow-colored:0px 0px 0px 1px var(--tw-shadow-color),0px 2px 4px var(--tw-shadow-color);
+  box-shadow:var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
+  transition-property:all;
+  transition-timing-function:cubic-bezier(.4,0,.2,1);
+  transition-duration:.15s;
+}
