--- a/app/globals.css
+++ b/app/globals.css
@@ -75,13 +75,29 @@
   }
 }
 
-.isScrolling {
-  --tw-bg-opacity:1;
-  background-color:rgb(255 255 255/var(--tw-bg-opacity));
-  --tw-shadow:0px 0px 0px 1px rgba(35,38,59,.05),0px 2px 4px rgba(35,38,59,.1);
-  --tw-shadow-colored:0px 0px 0px 1px var(--tw-shadow-color),0px 2px 4px var(--tw-shadow-color);
-  box-shadow:var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
-  transition-property:all;
-  transition-timing-function:cubic-bezier(.4,0,.2,1);
-  transition-duration:.15s;
+.is-scrolling {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-shadow: 0px 0px 0px 1px rgba(35, 38, 59, 0.05),
+    0px 2px 4px rgba(35, 38, 59, 0.1);
+  --tw-shadow-colored: 0px 0px 0px 1px var(--tw-shadow-color),
+    0px 2px 4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    backdrop-filter;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 0.15s;
 }
+
+.is-scrolling a {
+ color: #000000;
+}
+
