--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,7 @@
   }
 }
 
-.is-scrolling {
+.transparent-header.is-scrolling {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   --tw-shadow: 0px 0px 0px 1px rgba(35, 38, 59, 0.05),
@@ -84,17 +84,7 @@
     0px 2px 4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
-    -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
-    backdrop-filter;
-  transition-property: color, background-color, border-color,
-    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
-    backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 0.15s;
+  transition: color, background-color, box-shadow 0.15s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-scrolling a {
